# pySEAFOM

./: .gitignore  DATA_MODEL.md  LICENSE  MANIFEST.in  README.md  pySEAFOM_updates.pptx  pyproject.toml  self_noise_test.ipynb  setup.py
.github/workflows/: pages.yml
docs/: index.html
docs/assets/: markdown-page.js  style.css
docs/tests/: crosstalk.html  dynamic-range.html  fidelity.html  frequency-response.html  self-noise.html  spatial-resolution.html
docs/workflows/: CROSSTALK_WORKFLOW.md  DYNAMIC_RANGE_WORKFLOW.md  FREQUENCY_RESPONSE_WORKFLOW.md  SELF_NOISE_WORKFLOW.md  SPATIAL_RESOLUTION_WORKFLOW.md
source/: simulation_frequency_response.py  simulator_dynamic_range.py  simulator_spatial_resolution.py
source/pySEAFOM/: __init__.py  crosstalk.py  dynamic_range.py  fidelity.py  frequency_response.py  self_noise.py  spatial_resolution.py
testing_notebooks/: crosstalk_test.ipynb  dynamic_range_test.ipynb  dynamic_range_test.py  fidelity_test.ipynb  frequency_response_test.ipynb  self_noise_test.ipynb  spatial_resolution_test.ipynb
workflows/: DATA_MODEL.md  DYNAMIC_RANGE_WORKFLOW.md  FIDELITY_WORKFLOW.md  FREQUENCY_RESPONSE_WORKFLOW.md  SELF_NOISE_WORKFLOW.md
