[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pySEAFOM"
version = "0.1.8"
description = "DAS Performance Analysis Tools"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "SEAFOM Fiber Optic Monitoring Group", email = "your.email@example.com"}
]
keywords = ["DAS", "distributed acoustic sensing", "self-noise", "fiber optic", "seismic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/SEAFOM-Fiber-Optic-Monitoring-Group/pySEAFOM"
Documentation = "https://github.com/SEAFOM-Fiber-Optic-Monitoring-Group/pySEAFOM"
Repository = "https://github.com/SEAFOM-Fiber-Optic-Monitoring-Group/pySEAFOM"
Issues = "https://github.com/SEAFOM-Fiber-Optic-Monitoring-Group/pySEAFOM/issues"

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]
